--- a/public/main.css
+++ b/public/main.css
@@ -7839,3 +7839,10 @@ button {
 .wiggle-other {
   animation: keyframes1 infinite 0.6s ease-in;
   transform-origin: 30% 5%; }
+
+.delete-on-app {
+  transition: all 0.3s ease-in-out; }
+  .delete-on-app.deleted {
+    transition: all 0.3s ease-in-out;
+    opacity: 0;
+    transform: scale(1.5); }
