--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -53,20 +53,25 @@
 	margin: 0;
 }
 
+.pointer {
+	cursor: pointer;
+}
+
 .delete-on-app {
-	transition: all 0.3s ease-in-out;
+	transition: all 0.5s ease-in-out;
 	&.deleted {
-		transition: all 0.3s ease-in-out;
+		transition: all 0.5s ease-in-out;
 		opacity: 0;
-		transform: scale(1.5);
+		top: 400px;
+		bottom: -400px;
 
 		.version {
 			bottom: 1000px;
 			opacity: 0;
 		}
 		svg {
-			transition: all 0.3s ease-in-out;
-			transform: scale(2);
+			// transition: all 0.3s ease-in-out;
+			// transform: scale(2);
 		}
 	}
 }
@@ -164,9 +169,15 @@ $night: #311f62;
 		padding: $padding;
 		min-height: 0;
 	}
+	p,
+	.card-body {
+		font-size: 0.9rem;
+	}
 	.card-title {
-		$paddingTop: $padding * 0.5;
+		$paddingTop: $padding * 0.7;
 		padding: $paddingTop $padding;
+		font-weight: bold;
+		font-size: 1.2rem;
 	}
 }
 
