--- a/public/main.css
+++ b/public/main.css
@@ -5027,7 +5027,8 @@ body {
   --color-faded-2: rgba(0, 0, 0, 0.2);
   --color-faded-3: rgba(0, 0, 0, 0.4);
   --color-full-screen: rgba(0, 0, 0, 0.7);
-  --color-background-selected: rgba(32, 105, 157, 0.1); }
+  --color-background-selected: rgba(32, 105, 157, 0.1);
+  --box-shadow: 0px 10px 20px -5px rgba(0, 0, 0, 0.2); }
 
 body .main-content:before {
   bottom: -50px;
@@ -5089,8 +5090,9 @@ body.dark {
   --color-faded-1: rgba(255, 255, 255, 0.1);
   --color-faded-2: rgba(255, 255, 255, 0.2);
   --color-faded-3: rgba(255, 255, 255, 0.4);
-  --color-full-screen: rgba(63, 62, 62, 0.8);
-  --color-background-selected: rgba($primaryBright, 0.82); }
+  --color-full-screen: rgba(0, 0, 0, 1);
+  --color-background-selected: rgba($primaryBright, 0.82);
+  --box-shadow: 0px 0px 40px -5px rgba(255, 255, 255, 0.2); }
   body.dark .n-item.border-bottom {
     border-bottom: solid 1px rgba(255, 255, 255, 0.15) !important; }
   body.dark .btn-light {
@@ -5306,7 +5308,10 @@ select {
     width: auto;
     flex-shrink: 0;
     height: 50px;
-    position: relative; }
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
     .n-board-tabs .tab.active {
       border-bottom: solid 2px var(--color-primary-bright); }
     .n-board-tabs .tab:last-child.active {
@@ -5503,6 +5508,9 @@ body.scrolling .mini-map {
 
 .pointer {
   cursor: pointer; }
+
+.library-modal .n-modal-body {
+  background-color: var(--color-bg) !important; }
 
 .delete-on-app {
   transition: all 0.5s ease-in-out; }
