--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -57,6 +57,11 @@
 	cursor: pointer;
 }
 
+// HACK! This isn't working in the component
+.library-modal .n-modal-body {
+	background-color: var(--color-bg) !important;
+}
+
 .delete-on-app {
 	transition: all 0.5s ease-in-out;
 	&.deleted {
