--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -40,7 +40,8 @@
 	font-size: 0.5rem !important;
 }
 .text-sm {
-	font-size: 0.7rem !important;
+	font-size: 0.81rem !important;
+	line-height: 0.98rem;
 }
 .text-md {
 	font-size: 1rem !important;
