--- a/public/main.css
+++ b/public/main.css
@@ -5436,39 +5436,105 @@ body.scrolling .mini-map {
   .n-list .n-pop {
     border-radius: 0 !important; } }
 
-.n-item .left .btn-icon,
-.n-item .right .btn-icon {
-  max-width: 26px !important;
-  width: 26px;
-  padding: 0 !important;
-  text-align: center; }
-
-.n-item .left .form-control,
-.n-item .right .form-control {
-  margin: 6px 0; }
-
-.n-item .right .zmdi {
-  font-size: 26px; }
-
-.n-item .right .btn,
-.n-item .right a,
-.n-item .right span {
-  font-size: 0.9rem; }
-
-.n-item .right select {
-  min-width: 190px;
-  width: 190px;
-  text-align: right; }
-
-.n-item .right .form-control {
-  width: 190px; }
-
-.n-item main small {
-  font-size: 0.8rem !important;
-  line-height: 0.9rem !important; }
-
-.n-item.text-primary .n-text {
-  color: var(--color-primary); }
+.n-item {
+  text-align: left;
+  display: flex;
+  align-items: center;
+  justify-content: stretch;
+  padding: 4px 16px;
+  min-height: 46px;
+  max-width: 100vw;
+  position: relative;
+  transition: all 0.2s ease-in-out;
+  text-decoration: none;
+  color: var(--color-inverse);
+  font-size: 1rem;
+  flex-shrink: 0;
+  background-color: var(--color-solid); }
+  .n-item select,
+  .n-item input {
+    margin: 8px 0; }
+  .n-item.item-divider {
+    background-color: var(--color-solid); }
+  .n-item.disabled {
+    opacity: 0.5; }
+  .n-item.just-content {
+    background-color: transparent;
+    color: var(--color-inverse-2);
+    font-size: 0.8rem;
+    padding-top: 10px;
+    padding-bottom: 10px; }
+  .n-item.large {
+    min-height: 56px; }
+  .n-item.compact {
+    min-height: 20px; }
+  .n-item.border, .n-item[border] {
+    border: none !important;
+    box-shadow: 0px 3px 4px -2px rgba(0, 0, 0, 0.03);
+    background-color: var(--color-solid);
+    border-radius: 0.9rem;
+    overflow: hidden;
+    max-width: 95vw; }
+  .n-item.border-bottom, .n-item[border-bottom] {
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1); }
+  .n-item .left {
+    padding-right: 16px; }
+  .n-item .right {
+    padding-left: 16px;
+    text-align: right; }
+  .n-item .left,
+  .n-item .right {
+    flex-grow: 0;
+    flex-shrink: 0;
+    color: var(--color-inverse-2);
+    font-size: 0.9rem; }
+  .n-item .right .btn-clear {
+    margin-right: -10px !important; }
+  .n-item .right .zmdi .icon {
+    font-size: 24px !important; }
+  .n-item .left .zmdi .icon {
+    font-size: 24px !important; }
+  .n-item .main {
+    flex-grow: 1;
+    flex-shrink: 1;
+    overflow: hidden; }
+    .n-item .main h4 {
+      font-size: 1.14rem;
+      margin: 2px 0;
+      line-height: 1.56rem; }
+    .n-item .main p {
+      margin: 2px 0;
+      color: var(--color-inverse-3);
+      line-height: 140%;
+      font-size: 0.9rem; }
+      .n-item .main p.sm, .n-item .main p.small {
+        font-size: 0.8rem; }
+  .n-item .left .btn-icon,
+  .n-item .right .btn-icon {
+    max-width: 26px !important;
+    width: 26px;
+    padding: 0 !important;
+    text-align: center; }
+  .n-item .left .form-control,
+  .n-item .right .form-control {
+    margin: 6px 0; }
+  .n-item .right .zmdi {
+    font-size: 26px; }
+  .n-item .right .btn,
+  .n-item .right a,
+  .n-item .right span {
+    font-size: 0.9rem; }
+  .n-item .right select {
+    min-width: 190px;
+    width: 190px;
+    text-align: right; }
+  .n-item .right .form-control {
+    width: 190px; }
+  .n-item main small {
+    font-size: 0.8rem !important;
+    line-height: 0.9rem !important; }
+  .n-item.text-primary .n-text {
+    color: var(--color-primary); }
 
 .n-item-divider {
   min-height: 60px !important;
