--- a/public/main.css
+++ b/public/main.css
@@ -4964,6 +4964,8 @@ button:focus {
       background-color: var(--color-solid) !important;
       border-radius: 10px !important;
       box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.14); }
+    .btn-group .btn i.zmdi {
+      font-size: 1.4rem; }
 
 .btn-clear {
   background-color: none;
@@ -5081,7 +5083,7 @@ body.offline .main-content:before {
   padding: 2px 10px;
   z-index: 2000; }
 
-body.dark {
+body.theme-dark {
   --color-darkest: #000;
   --color-bg: #1d1d1d;
   --color-solid: #000;
@@ -5098,54 +5100,54 @@ body.dark {
   --color-faded-1: rgba(255, 255, 255, 0.1);
   --color-faded-2: rgba(255, 255, 255, 0.2);
   --color-faded-3: rgba(255, 255, 255, 0.4);
-  --color-full-screen: rgba(0, 0, 0, 1);
+  --color-full-screen: rgba(0, 0, 0, 0.4);
   --color-background-selected: rgba($primaryBright, 0.82);
   --box-shadow: 0px 0px 40px -5px rgba(255, 255, 255, 0.2); }
-  body.dark .n-item.border-bottom {
+  body.theme-dark .n-item.border-bottom {
     border-bottom: solid 1px rgba(255, 255, 255, 0.15) !important; }
-  body.dark .btn-light {
+  body.theme-dark .btn-light {
     color: #fff;
     background-color: #333;
     border-color: #262626; }
-    body.dark .btn-light:hover {
+    body.theme-dark .btn-light:hover {
       color: #fff;
       background-color: #262626;
       border-color: #262626; }
-    body.dark .btn-light:focus, body.dark .btn-light.focus {
+    body.theme-dark .btn-light:focus, body.theme-dark .btn-light.focus {
       box-shadow: 0 0 0 0.2rem rgba(71, 71, 71, 0.5); }
-    body.dark .btn-light.disabled, body.dark .btn-light:disabled {
+    body.theme-dark .btn-light.disabled, body.theme-dark .btn-light:disabled {
       color: #fff;
       background-color: #333;
       border-color: #262626; }
-    body.dark .btn-light:not(:disabled):not(.disabled):active, body.dark .btn-light:not(:disabled):not(.disabled).active,
-    .show > body.dark .btn-light.dropdown-toggle {
+    body.theme-dark .btn-light:not(:disabled):not(.disabled):active, body.theme-dark .btn-light:not(:disabled):not(.disabled).active,
+    .show > body.theme-dark .btn-light.dropdown-toggle {
       color: #fff;
       background-color: #319ed7;
       border-color: #060606; }
-      body.dark .btn-light:not(:disabled):not(.disabled):active:focus, body.dark .btn-light:not(:disabled):not(.disabled).active:focus,
-      .show > body.dark .btn-light.dropdown-toggle:focus {
+      body.theme-dark .btn-light:not(:disabled):not(.disabled):active:focus, body.theme-dark .btn-light:not(:disabled):not(.disabled).active:focus,
+      .show > body.theme-dark .btn-light.dropdown-toggle:focus {
         box-shadow: 0 0 0 0.2rem rgba(71, 71, 71, 0.5); }
-    body.dark .btn-light:hover {
+    body.theme-dark .btn-light:hover {
       color: #fff;
       background-color: #333;
       border-color: #1a1a1a; }
-      body.dark .btn-light:hover:hover {
+      body.theme-dark .btn-light:hover:hover {
         color: #fff;
         background-color: #1a1a1a;
         border-color: #1a1a1a; }
-      body.dark .btn-light:hover:focus, body.dark .btn-light:hover.focus {
+      body.theme-dark .btn-light:hover:focus, body.theme-dark .btn-light:hover.focus {
         box-shadow: 0 0 0 0.2rem rgba(60, 60, 60, 0.5); }
-      body.dark .btn-light:hover.disabled, body.dark .btn-light:hover:disabled {
+      body.theme-dark .btn-light:hover.disabled, body.theme-dark .btn-light:hover:disabled {
         color: #fff;
         background-color: #333;
         border-color: #1a1a1a; }
-      body.dark .btn-light:hover:not(:disabled):not(.disabled):active, body.dark .btn-light:hover:not(:disabled):not(.disabled).active,
-      .show > body.dark .btn-light:hover.dropdown-toggle {
+      body.theme-dark .btn-light:hover:not(:disabled):not(.disabled):active, body.theme-dark .btn-light:hover:not(:disabled):not(.disabled).active,
+      .show > body.theme-dark .btn-light:hover.dropdown-toggle {
         color: #fff;
         background-color: #319ed7;
         border-color: black; }
-        body.dark .btn-light:hover:not(:disabled):not(.disabled):active:focus, body.dark .btn-light:hover:not(:disabled):not(.disabled).active:focus,
-        .show > body.dark .btn-light:hover.dropdown-toggle:focus {
+        body.theme-dark .btn-light:hover:not(:disabled):not(.disabled):active:focus, body.theme-dark .btn-light:hover:not(:disabled):not(.disabled).active:focus,
+        .show > body.theme-dark .btn-light:hover.dropdown-toggle:focus {
           box-shadow: 0 0 0 0.2rem rgba(60, 60, 60, 0.5); }
 
 .truncate {
@@ -5574,6 +5576,21 @@ body.scrolling .mini-map {
 
 .bg-light {
   background-color: var(--color-solid) !important; }
+
+.n-item-log.compact {
+  margin: 2px !important; }
+  .n-item-log.compact .time-row {
+    padding: 2px; }
+    .n-item-log.compact .time-row .time {
+      font-size: 0.8rem; }
+  .n-item-log.compact .n-note-textualized {
+    font-size: 0.9rem;
+    line-height: 1.2rem; }
+  .n-item-log.compact .n-item {
+    min-height: 30px; }
+
+.n-item-log .time-row {
+  padding-top: 12px; }
 
 .input-model.type-range .keypad-holder {
   display: none; }
