--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -77,7 +77,7 @@ body {
 	--color-faded-1: rgba(255, 255, 255, 0.1);
 	--color-faded-2: rgba(255, 255, 255, 0.2);
 	--color-faded-3: rgba(255, 255, 255, 0.4);
-	--color-full-screen: rgba(0, 0, 0, 1);
+	--color-full-screen: rgba(0, 0, 0, 0.4);
 	--color-background-selected: rgba($primaryBright, 0.82);
 	--box-shadow: 0px 0px 40px -5px rgba(255, 255, 255, 0.2);
 
@@ -158,6 +158,6 @@ body.offline {
 	}
 }
 
-body.dark {
+body.theme-dark {
 	@include darkmode();
 }
