--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -202,6 +202,11 @@
 		margin: 2px !important;
 		.time-row {
 			padding: 2px;
+			display: flex;
+			align-items: center;
+			height: 24px;
+			margin-top: 3px;
+			margin-bottom: -2px;
 
 			.time {
 				font-size: 0.8rem;
