--- a/public/main.css
+++ b/public/main.css
@@ -5638,20 +5638,16 @@ body.scrolling .mini-map {
   background-color: var(--color-bg) !important; }
 
 .delete-on-app {
-  transition: all 0.5s ease-in-out; }
+  transition: all 1s ease-in-out; }
   .delete-on-app.deleted {
     transition: all 0.5s ease-in-out;
     opacity: 0;
-    top: 400px;
-    bottom: -400px; }
+    transform: scale(1.7); }
     .delete-on-app.deleted .version {
       bottom: 1000px;
       opacity: 0; }
 
 .loading-screen {
-  background-color: #319ed7;
-  background-size: cover;
-  background-position: center;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -5661,8 +5657,28 @@ body.scrolling .mini-map {
   display: flex;
   align-items: center;
   justify-content: center; }
-  .loading-screen svg {
-    transition: all 0.3s ease-in-out; }
+  .loading-screen:before {
+    transition: all 0.5s ease-in-out;
+    content: '';
+    background-color: #fff;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 300; }
+  .loading-screen:after {
+    transition: all 0.5s ease-in-out;
+    content: '';
+    background-image: url(/images/nomie-splash.svg);
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 400;
+    background-position: center; }
 
 .version {
   position: absolute;
