--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -41,6 +41,10 @@
 
 	&.compact {
 		min-height: 20px;
+		.n-text.md {
+			font-size: 0.8rem;
+			line-height: 1rem;
+		}
 	}
 
 	&.border,
@@ -64,6 +68,9 @@
 	.right {
 		padding-left: 16px;
 		text-align: right;
+		display: flex;
+		flex-wrap: nowrap;
+		flex-shrink: 0;
 	}
 
 	.left,
