--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -70,15 +70,19 @@
 		text-align: right;
 		display: flex;
 		flex-wrap: nowrap;
-		flex-shrink: 0;
+	}
+
+	.main {
+		flex-grow: 1;
+		flex-shrink: 1;
 	}
 
 	.left,
 	.right {
-		flex-grow: 0;
-		flex-shrink: 0;
 		color: var(--color-inverse-2);
 		font-size: 0.9rem;
+		flex-shrink: 0;
+		flex-grow: 0;
 	}
 
 	.right .btn-clear {
