--- a/public/main.css
+++ b/public/main.css
@@ -4989,7 +4989,7 @@ html,
 body {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
-  font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   -webkit-text-size-adjust: auto;
   box-sizing: border-box;
   margin: 0;
@@ -5038,13 +5038,17 @@ body {
   --color-faded-3: rgba(0, 0, 0, 0.4);
   --color-full-screen: rgba(0, 0, 0, 0.7);
   --color-background-selected: rgba(32, 105, 157, 0.1);
-  --box-shadow: 0px 10px 20px -5px rgba(0, 0, 0, 0.2); }
+  --color-translucent: rgba(255, 255, 255, 0.89);
+  --box-shadow-tight: 0px 2px 5px -1px rgba(0, 0, 0, 0.2);
+  --box-shadow: 0px 10px 20px -5px rgba(0, 0, 0, 0.2);
+  --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08),
+    0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.24); }
 
 body .main-content:before {
   bottom: -50px;
   left: 0;
   right: 0;
-  content: '';
+  content: "";
   transition: all 0.2s ease-in-out;
   position: fixed;
   background-color: transparent; }
@@ -5056,7 +5060,7 @@ body.hidden {
   align-content: center;
   height: 100vh; }
   body.hidden:after {
-    content: '';
+    content: "";
     background-image: url(images/nomie-white-type.png);
     display: block;
     width: 200px;
@@ -5071,7 +5075,7 @@ body.hidden {
 
 body.offline .main-content:before {
   transition: all 0.2s ease-in-out;
-  content: 'No internet connection';
+  content: "No internet connection";
   position: fixed;
   bottom: 50px !important;
   left: 0;
@@ -5102,7 +5106,11 @@ body.theme-dark {
   --color-faded-3: rgba(255, 255, 255, 0.4);
   --color-full-screen: rgba(0, 0, 0, 0.4);
   --color-background-selected: rgba($primaryBright, 0.82);
-  --box-shadow: 0px 0px 40px -5px rgba(255, 255, 255, 0.2); }
+  --box-shadow: 0px 0px 40px -5px rgba(255, 255, 255, 0.2);
+  --box-shadow-tight: 0px 0px 8px -1px rgba(255, 255, 255, 0.4);
+  --box-shadow-float: 0 4px 8px rgba(255, 255, 255, 0.08),
+    0 2px 4px rgba(255, 255, 255, 0.08), 0 0 2px rgba(255, 255, 255, 0.24);
+  --color-translucent: rgba(0, 0, 0, 0.79); }
   body.theme-dark .n-item.border-bottom {
     border-bottom: solid 1px rgba(255, 255, 255, 0.15) !important; }
   body.theme-dark .btn-light {
@@ -5365,6 +5373,43 @@ select {
 body.scrolling .mini-map {
   opacity: 0.3; }
 
+.leaflet-control-zoom {
+  float: none !important;
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  display: flex;
+  margin: 0 !important;
+  border: none !important;
+  border-radius: 22px !important;
+  box-shadow: var(--box-shadow-float) !important;
+  height: 44px;
+  overflow: hidden;
+  border: none; }
+  .leaflet-control-zoom a {
+    float: none !important;
+    height: 44px !important;
+    width: 52.8px !important;
+    line-height: 39px !important;
+    padding: 0px !important;
+    display: block !important;
+    border: none !important;
+    background-color: rgba(255, 255, 255, 0.7); }
+    .leaflet-control-zoom a:first-child {
+      border-right: solid 1px var(--color-faded-2) !important; }
+  @media (max-width: 575.98px) {
+    .leaflet-control-zoom {
+      display: none; } }
+
+.leaflet-control-attribution {
+  background: transparent !important;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  color: var(--color-solid) !important; }
+  .leaflet-control-attribution a {
+    color: var(--color-inverse) !important;
+    opacity: 0.5; }
+
 .leaflet-bar a {
   background-color: var(--color-solid) !important;
   color: var(--color-inverse) !important;
@@ -5415,7 +5460,7 @@ body.scrolling .mini-map {
     .mini-map.opened .zmdi {
       font-size: 1.4rem; }
   .mini-map::after {
-    content: '';
+    content: "";
     z-index: 20;
     position: absolute;
     top: 0;
