--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -1,94 +1,119 @@
-input[type='text'],
-input[type='number'],
-input[type='password'] {
-	background-color: var(--color-faded-1);
-	border-color: var(--color-solid-1);
-	color: var(--color-inverse-2);
+input[type="text"],
+input[type="number"],
+input[type="password"] {
+  background-color: var(--color-faded-1);
+  border-color: var(--color-solid-1);
+  color: var(--color-inverse-2);
 
-	border: none;
-	font-size: 1rem;
-	border-radius: 0.4rem;
-	padding: 6px;
-	color: var(--color-inverse);
-	&:focus {
-		background-color: var(--color-faded-1);
-		color: var(--color-inverse);
-	}
+  border: none;
+  font-size: 1rem;
+  border-radius: 0.4rem;
+  padding: 6px;
+  color: var(--color-inverse);
+  &:focus {
+    background-color: var(--color-faded-1);
+    color: var(--color-inverse);
+  }
+}
+
+.search-bar {
+  position: relative;
+  .btn.zmdi-close {
+    position: absolute;
+    right: 12px;
+    top: 8px;
+    font-size: 10px !important;
+    display: flex !important;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-inverse-3);
+    color: var(--color-solid);
+  }
+  .btn.zmdi-search {
+    position: absolute;
+    right: 32px;
+    top: 5px;
+    font-size: 24px !important;
+  }
 }
 
 .form-control {
-	&:focus {
-		box-shadow: none !important;
-	}
+  &:focus {
+    box-shadow: none !important;
+  }
 }
 input.form-control {
-	background-color: var(--color-faded-1);
-	border-color: var(--color-solid-1);
-	color: var(--color-inverse-2);
-	&:focus {
-		background-color: var(--color-faded);
-		color: var(--color-inverse-2);
-	}
+  background-color: var(--color-faded-1);
+  border-color: var(--color-solid-1);
+  color: var(--color-inverse-2);
+  &:focus {
+    background-color: var(--color-faded);
+    color: var(--color-inverse-2);
+  }
 }
 textarea.form-control {
-	background-color: var(--color-faded-1);
-	border-color: var(--color-solid-1);
-	color: var(--color-inverse-2);
-	border: none;
-	border-radius: 0.4rem;
-	padding: 6px;
-	font-size: 0.7rem;
-	color: var(--color-inverse);
-	&:focus {
-		background-color: var(--color-faded);
-		border-color: var(--color-solid);
-		color: var(--color-inverse);
-	}
+  background-color: var(--color-faded-1);
+  border-color: var(--color-solid-1);
+  color: var(--color-inverse-2);
+  border: none;
+  border-radius: 0.4rem;
+  padding: 6px;
+  font-size: 0.7rem;
+  color: var(--color-inverse);
+  &:focus {
+    background-color: var(--color-faded);
+    border-color: var(--color-solid);
+    color: var(--color-inverse);
+  }
 }
 
 select {
-	-webkit-appearance: none;
-	background-color: var(--color-solid-1) !important;
-	color: var(--color-inverse) !important;
-	border: solid 1px var(--color-solid) !important;
+  -webkit-appearance: none;
+  background-color: var(--color-solid-1) !important;
+  color: var(--color-inverse) !important;
+  border: solid 1px var(--color-solid) !important;
 }
 
 .input-group {
-	border: none;
+  border: none;
 
-	display: flex;
-	flex-direction: row;
-	align-items: stretch;
-	justify-content: stretch;
-	.form-control {
-		margin-top: 0;
-	}
-	.input-group-text {
-		border: none;
-		background-color: var(--color-faded);
-	}
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: stretch;
+  .form-control {
+    margin-top: 0;
+  }
+  .input-group-text {
+    border: none;
+    background-color: var(--color-faded);
+  }
 }
 
 .input-group-prepend .input-group-prepend .input-group-text::after {
-	content: normal;
-	border-right: solid 1px rgba(0, 0, 0, 0.4);
-	display: block;
-	padding-left: 6px;
-	padding-right: 6px;
+  content: normal;
+  border-right: solid 1px rgba(0, 0, 0, 0.4);
+  display: block;
+  padding-left: 6px;
+  padding-right: 6px;
 }
 
 .search-input {
-	border-radius: 20px;
-	padding: 0px 16px;
-	height: 36px;
-	border: solid 1px transparent;
-	background-color: var(--color-faded);
-	color: var(--color-inverse-2);
-	flex-grow: 1;
-	outline: none;
-	transition: all 0.2s ease-in-out;
-	&:focus {
-		border: solid 1px var(--color-faded-1);
-		background-color: var(--color-faded);
-	}
+  border-radius: 20px;
+  padding: 0px 16px;
+  height: 36px;
+  border: solid 1px transparent;
+  background-color: var(--color-faded);
+  color: var(--color-inverse-2);
+  flex-grow: 1;
+  outline: none;
+  transition: all 0.2s ease-in-out;
+  &:focus {
+    border: solid 1px var(--color-faded-1);
+    background-color: var(--color-faded);
+  }
 }
